# code-context-agent

./: .gitignore  .gitlab-ci.yml  .semgrepignore  AGENTS.md  CHANGELOG.md  LICENSE  PLAN.md  README.md  SECURITY.md  SECURITY_INSIGHTS.yml  TECH_DEBT_REMEDIATION.md  ag-ui-strands-pr.md  closing-the-loop.md  lefthook.yml  main.py  mise.toml  mkdocs.yml  pyproject.toml
.claude/: settings.json
.claude/hooks/: review-before-commit.sh
.erpaval/archive/ui-revamp-20260326/: plan.yaml  research-findings.md
.erpaval/sessions/ui-revamp-20260326/: explore-findings.yaml
.erpaval/sessions/v8-swarm-pipeline/: plan.md  validation.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/BACKLOG/: swarm-based-analysis-pipeline.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: bump.yml  ci.yml  codeql.yml  dependency-review.yml  deps-update.yml  pages.yml  pr-title.yml  release.yml  rescan-on-advisory.yml  scorecard.yml  security.yml
docs/: closing-the-loop.md  faq.md  gen_ref_pages.py  index.md  tenets.md  troubleshooting.md
docs/adr/: 0001-strands-agents-framework.md  0002-networkx-multi-layer-code-graph.md  0003-ag-ui-event-streaming.md  0004-fastmcp-v3-server.md  0005-lsp-fallback-chains.md  0006-security-hardened-shell.md  0007-openspec-spec-driven-development.md  0008-bm25-ranked-text-search.md  0009-kuzudb-persistent-graph-backend.md  0010-multi-repo-registry.md  0011-deterministic-indexer.md  0012-strands-swarm-multi-agent.md  0013-coordinator-team-dispatch.md  0014-gitnexus-code-intelligence.md  README.md  template.md
docs/architecture/: coordinator.md  hooks.md  overview.md  progressive-disclosure.md  swarm.md  tenets.md  tui-phases.md
docs/blog/: index.md
docs/design/: progressive-disclosure.md
docs/development/: code-style.md  guide.md  testing.md
docs/getting-started/: check-command.md  configuration.md  full-mode.md  installation.md  quickstart.md  viz.md
docs/guide/: ci-init.md  output.md  verdict.md
docs/security/: overview.md
docs/stylesheets/: extra.css
docs/tools/: ast.md  clones.md  discovery.md  git.md  graph.md  indexer.md  lsp.md  mcp.md  overview.md  registry.md  search.md  shell.md  storage.md
openspec/: README.md  config.yaml
openspec/archive/v7/: config.yaml
openspec/specs/analysis-pipeline/: spec.md
openspec/specs/architecture/: spec.md
openspec/specs/data-model/: spec.md
openspec/specs/tool-system/: spec.md
scripts/: code-critic.sh  convert_pip_audit_to_gitlab.py  release.sh  security_report.py
src/code_context_agent/: __init__.py  __main__.py  cli.py  config.py  display.py  exceptions.py  indexer.py  temporal.py  verdict.py
src/code_context_agent/agent/: __init__.py  analysts.py  coordinator.py  factory.py  hooks.py  prompts.py  runner.py  sop.py  steering.py  swarm.py
src/code_context_agent/ci/: __init__.py
src/code_context_agent/ci/templates/: github_actions.yml  gitlab_ci.yml
src/code_context_agent/consumer/: __init__.py  base.py  phases.py  rich_consumer.py  state.py
src/code_context_agent/dashboard/: __init__.py  _data.py  _mermaid.py  _theme.py
src/code_context_agent/dashboard/views/: __init__.py  bundles.py  dependencies.py  graph.py  hotspots.py  insights.py  modules.py  narrative.py  overview.py  signatures.py
src/code_context_agent/issues/: __init__.py  github.py
src/code_context_agent/mcp/: __init__.py  registry.py  server.py
src/code_context_agent/models/: __init__.py  base.py  index.py  output.py
src/code_context_agent/rules/: __init__.py  py_business_logic.yml  py_code_smells.yml  ts_business_logic.yml  ts_code_smells.yml
src/code_context_agent/templates/: __init__.py  context_output.md.j2  coordinator.md.j2  system.md.j2
src/code_context_agent/templates/partials/: _astgrep.md.j2  _business_logic.md.j2  _code_graph.md.j2  _git_history.md.j2  _gitnexus.md.j2  _output_format.md.j2  _reasoning.md.j2  _rules.md.j2  _synthesis.md.j2
src/code_context_agent/templates/steering/: _anti_patterns.md.j2  _conciseness.md.j2  _full_mode.md.j2  _graph_exploration.md.j2  _size_limits.md.j2  _tool_efficiency.md.j2
src/code_context_agent/tools/: __init__.py  astgrep.py  clones.py  coordinator_tools.py  discovery.py  git.py  shell.py  shell_tool.py  validation.py
src/code_context_agent/ui/: index.html
src/code_context_agent/utils/: __init__.py  logging.py
src/code_context_agent/viz/: index.html
tests/: test_cli.py  test_cli_full.py  test_config_mode.py  test_hooks.py  test_indexer.py  test_prompts.py  test_prompts_mode.py  test_viz.py
tests/agent/: test_runner.py
tests/consumer/: test_discovery.py  test_phases.py  test_rich_consumer.py  test_state_v7.py
tests/mcp/: test_hints.py  test_registry.py
tests/models/: test_output.py
tests/tools/: test_discovery.py  test_git.py  test_shell_security.py
tests/tools/graph/: __init__.py  test_adapters.py  test_analysis.py  test_frameworks.py  test_model.py  test_storage.py  test_tools.py
tests/tools/search/: test_bm25.py
ui/: biome.json  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
ui-next/js/: app.js  colors.js  data-loader.js  graph-utils.js  router.js
ui-next/js/components/: bar-chart.js  gauge.js  search-bar.js  sidebar.js  stat-card.js  tooltip.js
ui-next/js/views/: bundles.js  dashboard.js  dependencies.js  graph.js  hotspots.js  insights.js  landing.js  narrative.js  signatures.js
ui/src/: main.tsx  tailwind.css  theme.css  types.ts
ui/src/components/: color-legend.tsx  empty-state.tsx  filter-chips.tsx  gauge.tsx  neo-bar-chart.tsx  search-bar.tsx  severity-badge.tsx  sidebar.tsx  stat-card.tsx  tooltip.tsx
ui/src/constants/: colors.ts
ui/src/lib/: data-loader.ts  graph-utils.ts  mermaid-init.ts
ui/src/routes/: __root.tsx  bundles.tsx  dependencies.tsx  graph.tsx  hotspots.tsx  index.tsx  insights.tsx  modules.tsx  narrative.tsx  signatures.tsx
ui/src/store/: use-store.ts
viz/: index.html  style.css
viz/js/: dashboard.js  dependencies.js  graph.js  hotspots.js  modules.js  narrative.js  state.js
(+43 files in other folders)
