[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[project]
name = "code-context-agent"
version = "0.4.1"
description = "A CLI tool for code context analysis"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cyclopts>=4.4.5",
    "networkx[default,extra]>=3.6.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "rich>=14.0.0",
    "strands-agents>=1.22.0",
    "strands-agents-tools>=0.2.19",
    "ag-ui-strands>=0.1.0",
    "ag-ui-protocol>=0.1.10",
]

[project.scripts]
code-context-agent = "code_context_agent.cli:app"

[dependency-groups]
dev = [
    "commitizen>=4.11.3",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.14.11",
    "strands-agents-evals>=0.1.2",
    "ty>=0.0.11",
]
security = [
    "bandit>=1.9.2",
    "pip-audit>=2.10.0",
]

# =============================================================================
# Ruff Configuration (Linting & Formatting)
# =============================================================================

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py313"
exclude = [".git", ".venv", "__pycache__", "build", "dist", ".ruff_cache"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate
    "PL",     # pylint
    "RUF",    # Ruff-specific
    "D",      # pydocstyle (docstrings)
    "S",      # flake8-bandit (security)
]
ignore = [
    "D100",    # Allow missing module docstrings
    "D104",    # Allow missing package docstrings
    "D301",    # Allow backslashes in docstrings (for LSP protocol docs)
    "PLC0415", # Allow imports inside functions (for circular import avoidance)
    "B027",    # Allow empty methods in ABCs (optional hook methods)
    "S602",    # Allow subprocess shell=True (needed for shell commands)
    "PLR0913", # Allow many function arguments (tool function design)
    "PLW1510", # Allow subprocess.run without check (we handle errors)
    "ARG002",  # Allow unused method arguments (protocol interface compliance)
    "SIM105",  # Allow try-except-pass patterns (explicit is clearer)
]
fixable = ["ALL"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D", "S101", "ARG"]
"**/__init__.py" = ["F401", "RUF022"]  # Allow unused imports and unsorted __all__ in init files
"src/code_context_agent/tools/**/*.py" = ["PLR2004"]  # Allow magic numbers in tool implementations

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true

# =============================================================================
# Ty Configuration (Type Checking)
# =============================================================================

[tool.ty.rules]
possibly-unresolved-reference = "error"
invalid-argument-type = "error"
# incompatible-assignment - not yet supported by ty
missing-argument = "error"
unsupported-operator = "error"
division-by-zero = "error"
unused-ignore-comment = "warn"
redundant-cast = "warn"

[tool.ty.environment]
python-version = "3.13"

[tool.ty.src]
include = ["src"]

# =============================================================================
# Pytest Configuration
# =============================================================================

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

# =============================================================================
# Commitizen Configuration (Conventional Commits)
# =============================================================================

[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "pep621"
version_files = [
    "src/code_context_agent/__init__.py:__version__"
]
tag_format = "v$version"
update_changelog_on_bump = true
version_scheme = "semver"
