[build-system]
requires = ["uv_build>=0.10.5,<0.12.0"]
build-backend = "uv_build"

[project]
name = "code-context-agent"
version = "3.1.1"
description = "A CLI tool for code context analysis"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.13"
dependencies = [
    "cyclopts>=4.6.0",
    "fastmcp>=3.0.2,<4",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "rank-bm25>=0.2.2",
    "rich>=14.3.3",
    "strands-agents>=1.27.0",
    "strands-agents-tools>=0.2.21",
    "ty>=0.0.18",
]

[project.scripts]
code-context-agent = "code_context_agent.cli:app"

[dependency-groups]
dev = [
    "commitizen>=4.13.8",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.15.2",
    "strands-agents-evals>=0.1.7",
]
docs = [
    "mkdocs>=1.6.0,<2",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-git-revision-date-localized-plugin>=1.3.0",
    "mkdocs-literate-nav>=0.6.0",
    "mkdocs-llmstxt>=0.5.0",
    "mkdocs-material>=9.7.0,<9.8",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocs-redirects>=1.2.0",
    "mkdocstrings[python]>=0.27.0",
    "pymdown-extensions>=10.0",
]
security = [
    "bandit[sarif]>=1.9.3",
]

# =============================================================================
# Ruff Configuration (Linting & Formatting)
# =============================================================================

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py313"
exclude = [".git", ".venv", "__pycache__", "build", "dist", ".ruff_cache"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "C90",    # mccabe complexity
    "BLE",    # flake8-blind-except (catch specific exceptions)
    "COM",    # flake8-commas (enforce trailing commas)
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate
    "PL",     # pylint
    "RUF",    # Ruff-specific
    "D",      # pydocstyle (docstrings)
    "S",      # flake8-bandit (security)
    "N",      # pep8-naming
    "A",      # flake8-builtins
    "DTZ",    # flake8-datetimez (timezone-aware datetime)
    "T10",    # flake8-debugger (no debugger statements)
    "LOG",    # flake8-logging
    "G",      # flake8-logging-format
    "PIE",    # flake8-pie
    "PT",     # flake8-pytest-style
    "RET",    # flake8-return
    "TRY",    # tryceratops
    "FLY",    # flynt
    "PERF",   # perflint
    "FURB",   # refurb
]
ignore = [
    "D100",    # Allow missing module docstrings
    "D104",    # Allow missing package docstrings
    "D301",    # Allow backslashes in docstrings (for LSP protocol docs)
    "PLC0415", # Allow imports inside functions (for circular import avoidance)
    "B027",    # Allow empty methods in ABCs (optional hook methods)
    "S602",    # Allow subprocess shell=True (needed for shell commands)
    "S603",    # Allow subprocess calls (needed for shell tool execution)
    "S607",    # Allow partial executable paths (sh -c pattern is safe)
    "PLR0913", # Allow many function arguments (tool function design)
    "PLW1510", # Allow subprocess.run without check (we handle errors)
    "ARG002",  # Allow unused method arguments (protocol interface compliance)
    "SIM105",  # Allow try-except-pass patterns (explicit is clearer)
    "G004",    # Allow f-strings in logging (using loguru)
    "TID252",  # Allow relative imports (project style choice)
    "EM101",   # Allow string literals in exceptions
    "EM102",   # Allow f-strings in exceptions
    "TRY003",  # Allow long exception messages
    "TRY301",  # Allow raise in try blocks (common pattern in tool functions)
    "PERF203", # Allow try-except in loops (needed for error handling in tools)
    "RET504",  # Allow unnecessary assignment before return (sometimes clearer)
    "N818",    # Allow exception names without "Error" suffix (existing convention)
    "A005",    # Allow modules shadowing builtins (e.g., logging module name)
    "COM812",  # Conflicts with ruff formatter (trailing comma)
]
fixable = ["ALL"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 10  # Enforce complexity limit after refactoring

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D", "S101", "ARG", "PLR2004"]
"**/__init__.py" = ["F401", "RUF022"]  # Allow unused imports and unsorted __all__ in init files
"src/code_context_agent/tools/**/*.py" = ["PLR2004", "PLR0911", "PLR0912", "PLR0915", "C901", "SIM102", "SIM108"]  # Allow magic numbers, complexity, and dispatcher patterns in tools

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true

# =============================================================================
# Ty Configuration (Type Checking)
# =============================================================================

[tool.ty.rules]
possibly-unresolved-reference = "error"
invalid-argument-type = "error"
# incompatible-assignment - not yet supported by ty
missing-argument = "error"
unsupported-operator = "error"
division-by-zero = "error"
unused-ignore-comment = "warn"
redundant-cast = "warn"

[tool.ty.environment]
python-version = "3.13"

[tool.ty.src]
include = ["src"]
exclude = []

# =============================================================================
# Bandit Configuration (SAST)
# =============================================================================

[tool.bandit]
exclude_dirs = ["tests", "docs", ".venv", "build", "dist"]
skips = [
    "B101",  # assert_used — tests use assert, ruff S101 handles per-file
    "B404",  # import_subprocess — CLI tool that shells out by design
    "B602",  # subprocess shell=True — needed for shell tool execution
    "B603",  # subprocess calls — needed for shell tool execution
    "B607",  # partial executable paths — sh -c pattern is safe
    "B701",  # jinja2_autoescape_false — templates are LLM prompts, not web HTML
]

# =============================================================================
# Coverage Configuration (pytest-cov / coverage.py)
# =============================================================================

[tool.coverage.run]
branch = true
source = ["code_context_agent"]
omit = [
    "*/tests/*",
    "*/__main__.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
fail_under = 25
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@overload",
]

[tool.coverage.xml]
output = "coverage.xml"

# =============================================================================
# Pytest Configuration
# =============================================================================

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

# =============================================================================
# pip-licenses Configuration (License Compliance)
# =============================================================================

[tool.pip-licenses]
from = "mixed"
fail-on = "GPL;AGPL;SSPL;EUPL;CPAL;OSL;RPL"
partial-match = true
ignore-packages = [
    "code-context-agent",
    "docutils",  # Triple-licensed BSD/GPL/Public Domain — usable under BSD
]

# =============================================================================
# Commitizen Configuration (Conventional Commits)
# =============================================================================

[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "pep621"
version_files = [
    "src/code_context_agent/__init__.py:__version__"
]
tag_format = "v$version"
update_changelog_on_bump = true
version_scheme = "semver"
